# heimdall

./: .gitignore  README.md  install.sh  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: release.yml
backend/: Cargo.toml
backend/src/: auth.rs  config.rs  main.rs
backend/src/transcription/: deepgram.rs  mod.rs  provider.rs  xai.rs
extension/: extension.ts  metadata.json  prefs.ts
scripts/: build-deb.sh  install-dev.sh
