[package]
name = "meeting-recorder"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
nix = { version = "0.29", features = ["process", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
